--- a/about.html
+++ b/about.html
@@ -3,6 +3,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="keywords" content="مقاولات, ديكورات, ترميم, تصميم داخلي, مؤسسة درر أروئ, بديل شيبورد, مظلات, عوازل اسطح, ورق جدران, فوم, باركيه, ديكورات, دهانات خارجية, دهانات داخليه, ترميم مباني, مقاولات عامة, سواتر, برجولات "> 
+  <meta name="description" content="تعرف على مؤسسة درر أروئ للمقاولات والديكورات، وجهتك الأولى لخدمات المقاولات والترميم والتصاميم الداخلية المبتكرة. فريق متخصص يقدم حلولاً عصرية تلبي ذوقك وتعكس شخصيتك بدقة واحترافية.">
+ 
   <title> مؤسسه درر اروئ للمقاولات والديكورات</title>
   <link rel="icon" href="IMG-20250617-WA0005.jpg" type="image/png" />
 
@@ -1349,12 +1352,50 @@ section.contact h2::after {
   box-shadow: 0 12px 25px rgba(0,0,0,0.25);
 }
 
+
+/* زر العودة لأعلى الصفحة */
+.back-to-top {
+  position: fixed;
+  bottom: 30px;
+  left: 30px;
+  width: 50px;
+  height: 50px;
+  background: var(--accent-color); /* استخدم لونك الأساسي */
+  color: #fff;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.5rem;
+  text-decoration: none;
+  box-shadow: 0 8px 20px rgba(0,0,0,0.2);
+  opacity: 0;
+  visibility: hidden;
+  transition: all 0.3s ease;
+  z-index: 999;
+}
+
+.back-to-top.show {
+  opacity: 1;
+  visibility: visible;
+}
+
+.back-to-top:hover {
+  background: var(--primary-color);
+  transform: scale(1.1);
+}
+
+html {
+  scroll-behavior: smooth;
+}
+
 </style>
 
 <main>
 <body>
 
 
+  <a href="#" class="back-to-top"><i class="fas fa-arrow-up"></i></a>
     <section class="about" id="about">
       <div class="text">
         <h2>من نحن</h2>
@@ -1455,11 +1496,12 @@ section.contact h2::after {
   </div>
 
 
-  <div class="footer-bottom">
-    © جميع الحقوق محفوظة لمؤسسة درر أروئ للمقاولات 
-    <br>
+  </div>
+
+© جميع الحقوق محفوظة لمؤسسة درر أروئ للمقاولات والديكورات <span id="year"></span>
+<script>document.getElementById("year").textContent = new Date().getFullYear();</script>
     <h3>صمم من قبل     <a href="https://wa.me/967775046058"  style="width: auto;"   target="_parent" class="whatsapp"><i class="fab fa-whatsapp"></i></a>
-</h3>
+
 
   </div>
 
@@ -1530,5 +1572,27 @@ section.contact h2::after {
     });
   </script>
 
+
+<script>
+  // إظهار وإخفاء زر العودة للأعلى
+  const backToTop = document.querySelector('.back-to-top');
+
+  window.addEventListener('scroll', () => {
+    if (window.scrollY > 300) {
+      backToTop.classList.add('show');
+    } else {
+      backToTop.classList.remove('show');
+    }
+  });
+
+  // تمرير سلس للعودة للأعلى
+  backToTop.addEventListener('click', (e) => {
+    e.preventDefault();
+    window.scrollTo({
+      top: 0,
+      behavior: 'smooth'
+    });
+  });
+</script>
 </body>
 </html>
