--- a/Blog.html
+++ b/Blog.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="description" content="اكتشف في مدونة مؤسسة درر أروئ للمقاولات والديكورات أحدث الأفكار، والنصائح، والتوجهات في عالم التصميم الداخلي والخارجي، والمقاولات، والديكور. نصحبك في رحلة إلهام وتميز لجعل مساحاتك تعكس شخصيتك وذوقك الراقي.">
+  <meta name="keywords" content="مقاولات, ديكورات, ترميم, تصميم داخلي, مؤسسة درر أروئ, بديل شيبورد, مظلات, عوازل اسطح, ورق جدران, فوم, باركيه, ديكورات, دهانات خارجية, دهانات داخليه, ترميم مباني, مقاولات عامة, سواتر, برجولات "> 
   <title>مؤسسة درر أروئ للمقاولات والديكورات</title>
   <link rel="icon" href="IMG-20250617-WA0005.jpg" type="image/png" />
 
@@ -1445,10 +1447,49 @@ section.blog h2::after {
   }
 }
 
+
+/* زر العودة لأعلى الصفحة */
+.back-to-top {
+  position: fixed;
+  bottom: 30px;
+  left: 30px;
+  width: 50px;
+  height: 50px;
+  background: var(--accent-color); /* استخدم لونك الأساسي */
+  color: #fff;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.5rem;
+  text-decoration: none;
+  box-shadow: 0 8px 20px rgba(0,0,0,0.2);
+  opacity: 0;
+  visibility: hidden;
+  transition: all 0.3s ease;
+  z-index: 999;
+}
+
+.back-to-top.show {
+  opacity: 1;
+  visibility: visible;
+}
+
+.back-to-top:hover {
+  background: var(--primary-color);
+  transform: scale(1.1);
+}
+
+html {
+  scroll-behavior: smooth;
+}
+
 </style>
 
 </head>
 <body>
+
+  <a href="#" class="back-to-top"><i class="fas fa-arrow-up"></i></a>
 
   <!-- أيقونات جانبية عائمة -->
   <div class="side-icons">
@@ -1620,11 +1661,12 @@ section.blog h2::after {
     </div>
 
 
-  <div class="footer-bottom">
-    © جميع الحقوق محفوظة لمؤسسة درر أروئ للمقاولات 
-    <br>
+  </div>
+
+© جميع الحقوق محفوظة لمؤسسة درر أروئ للمقاولات والديكورات <span id="year"></span>
+<script>document.getElementById("year").textContent = new Date().getFullYear();</script>
     <h3>صمم من قبل     <a href="https://wa.me/967775046058"  style="width: auto;"   target="_parent" class="whatsapp"><i class="fab fa-whatsapp"></i></a>
-</h3>
+
 
   </div>
   </footer>
@@ -1646,5 +1688,28 @@ section.blog h2::after {
       mobileNav.classList.toggle('show');
     });
   </script>
+
+
+<script>
+  // إظهار وإخفاء زر العودة للأعلى
+  const backToTop = document.querySelector('.back-to-top');
+
+  window.addEventListener('scroll', () => {
+    if (window.scrollY > 300) {
+      backToTop.classList.add('show');
+    } else {
+      backToTop.classList.remove('show');
+    }
+  });
+
+  // تمرير سلس للعودة للأعلى
+  backToTop.addEventListener('click', (e) => {
+    e.preventDefault();
+    window.scrollTo({
+      top: 0,
+      behavior: 'smooth'
+    });
+  });
+</script>
 </body>
 </html>
