--- a/Contact us.html
+++ b/Contact us.html
@@ -3,6 +3,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="description" content="تواصل مع مؤسسة درر أروئ للمقاولات والديكورات بسهولة عبر الجوال أو واتساب. فريق محترف جاهز للإجابة على استفساراتك وتقديم استشارات مجانية حول مشاريعك.">
+  <meta name="keywords" content="مقاولات, ديكورات, ترميم, تصميم داخلي, مؤسسة درر أروئ, بديل شيبورد, مظلات, عوازل اسطح, ورق جدران, فوم, باركيه, ديكورات, دهانات خارجية, دهانات داخليه, ترميم مباني, مقاولات عامة, سواتر, برجولات "> 
+
   <title> مؤسسه درر اروئ للمقاولات والديكورات</title>
   <link rel="icon" href="IMG-20250617-WA0005.jpg" type="image/png" />
 
@@ -1349,12 +1352,50 @@ section.contact h2::after {
   box-shadow: 0 12px 25px rgba(0,0,0,0.25);
 }
 
+
+/* زر العودة لأعلى الصفحة */
+.back-to-top {
+  position: fixed;
+  bottom: 30px;
+  left: 30px;
+  width: 50px;
+  height: 50px;
+  background: var(--accent-color); /* استخدم لونك الأساسي */
+  color: #fff;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.5rem;
+  text-decoration: none;
+  box-shadow: 0 8px 20px rgba(0,0,0,0.2);
+  opacity: 0;
+  visibility: hidden;
+  transition: all 0.3s ease;
+  z-index: 999;
+}
+
+.back-to-top.show {
+  opacity: 1;
+  visibility: visible;
+}
+
+.back-to-top:hover {
+  background: var(--primary-color);
+  transform: scale(1.1);
+}
+
+html {
+  scroll-behavior: smooth;
+}
+
 </style>
 
 
 <body>
 
 
+  <a href="#" class="back-to-top"><i class="fas fa-arrow-up"></i></a>
   <section class="hero">
     <img src="ديكورات/2 (1).jpg" class="active" alt="صورة 1">
     <img src="برجولات/2.jpg" alt="صورة 2">
@@ -1380,7 +1421,7 @@ section.contact h2::after {
 
     <!-- فرع الرياض -->
     <div class="branch-card">
-      <img src="فوم/1.jpg" alt="فرع الرياض">
+      <img src="صور المحل/7.jpeg" alt="فرع الرياض">
       <div class="branch-content">
         <h3>فرع الرياض</h3>
         <iframe 
@@ -1390,17 +1431,16 @@ section.contact h2::after {
           loading="lazy">
         </iframe>
         <div class="branch-contact">
-          <a href="https://wa.me/9660509422751" target="_blank" class="whatsapp">
+          <a href="https://wa.me/9660550212613" target="_blank" class="whatsapp">
             <i class="fab fa-whatsapp"></i>
           </a>
-          <a href="tel:+9660509422751" class="phone">
+          <a href="tel:+9660550212613" class="phone">
             <i class="fas fa-phone-alt"></i>
           </a>
         </div>
       </div>
     </div>
 
-    <!-- فرع جدة -->
 <div class="branch-card">
   <img src="ديكورات/2 (1).jpg" alt="فرع الجله">
   <div class="branch-content">
@@ -1412,10 +1452,30 @@ section.contact h2::after {
       loading="lazy">
     </iframe>
     <div class="branch-contact">
-      <a href="https://wa.me/9660550212613" target="_blank" class="whatsapp">
+      <a href="https://wa.me/9660509422751" target="_blank" class="whatsapp">
         <i class="fab fa-whatsapp"></i>
       </a>
-      <a href="tel:+9660550212613" class="phone">
+      <a href="tel:+9660509422751" class="phone">
+        <i class="fas fa-phone-alt"></i>
+      </a>
+    </div>
+  </div>
+</div>
+<div class="branch-card">
+  <img src="صور المحل/3.jpeg" alt="فرع طويق">
+  <div class="branch-content">
+    <h3>فرع طويق</h3>
+    <iframe 
+      src="https://www.google.com/maps?q=24.548833,46.503611&hl=ar&output=embed"
+      frameborder="0"
+      allowfullscreen=""
+      loading="lazy">
+    </iframe>
+    <div class="branch-contact">
+      <a href="https://wa.me/9660509422751" target="_blank" class="whatsapp">
+        <i class="fab fa-whatsapp"></i>
+      </a>
+      <a href="tel:+9660509422751" class="phone">
         <i class="fas fa-phone-alt"></i>
       </a>
     </div>
@@ -1501,11 +1561,13 @@ section.contact h2::after {
   </div>
 
 
-  <div class="footer-bottom">
-    © جميع الحقوق محفوظة لمؤسسة درر أروئ للمقاولات 
-    <br>
+
+  </div>
+
+© جميع الحقوق محفوظة لمؤسسة درر أروئ للمقاولات والديكورات <span id="year"></span>
+<script>document.getElementById("year").textContent = new Date().getFullYear();</script>
     <h3>صمم من قبل     <a href="https://wa.me/967775046058"  style="width: auto;"   target="_parent" class="whatsapp"><i class="fab fa-whatsapp"></i></a>
-</h3>
+
 
   </div>
 
@@ -1576,5 +1638,27 @@ section.contact h2::after {
     });
   </script>
 
+
+<script>
+  // إظهار وإخفاء زر العودة للأعلى
+  const backToTop = document.querySelector('.back-to-top');
+
+  window.addEventListener('scroll', () => {
+    if (window.scrollY > 300) {
+      backToTop.classList.add('show');
+    } else {
+      backToTop.classList.remove('show');
+    }
+  });
+
+  // تمرير سلس للعودة للأعلى
+  backToTop.addEventListener('click', (e) => {
+    e.preventDefault();
+    window.scrollTo({
+      top: 0,
+      behavior: 'smooth'
+    });
+  });
+</script>
 </body>
 </html>
