--- a/index.html
+++ b/index.html
@@ -1843,7 +1843,6 @@ html {
 
 
 
-
 <section class="portfolio" id="portfolio">
   <h2>بعض أعمالنا</h2>
   <div class="portfolio-grid">
@@ -1884,7 +1883,7 @@ html {
 
     <div class="portfolio-grid">
   
-    <div class="portfolio-item"><img src="ترميم مباني/10.jpg" alt="عمل 1"></div>
+    <div class="portfolio-item"><img src="ديكورات/11.jpg " alt="عمل 1"></div>
     <div class="portfolio-item"><img src="ترميم مباني/2.jpg" alt="عمل 2"></div>
     <div class="portfolio-item"><img src="ترميم مباني/3.jpg" alt="عمل 3"></div>
     <div class="portfolio-item"><img src="ترميم مباني/4.jpg" alt="عمل 4"></div>
@@ -1981,10 +1980,10 @@ html {
 
     <div class="portfolio-grid">
   
-    <div class="portfolio-item"><img src="مقاولات عامة/1.jpg" alt="عمل 1"></div>
-    <div class="portfolio-item"><img src="مقاولات عامة/2.jpg" alt="عمل 2"></div>
-    <div class="portfolio-item"><img src="مقاولات عامة/3.jpg" alt="عمل 3"></div>
-    <div class="portfolio-item"><img src="مقاولات عامة/4.jpg" alt="عمل 4"></div>
+    <div class="portfolio-item"><img src="ديكورات/6.jpg" alt="عمل 1"></div>
+    <div class="portfolio-item"><img src="ديكورات/7.jpg" alt="عمل 2"></div>
+    <div class="portfolio-item"><img src="ديكورات/8.jpg" alt="عمل 3"></div>
+    <div class="portfolio-item"><img src="ديكورات/9.jpg" alt="عمل 4"></div>
 
   </div>
 
